<update> code